# test-commitizen

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bumpversion.yml  ci.yml
test_commitizen/: __init__.py  caca.py  haha.py  pipi.py
test_commitizen/tests/: test_tk.py
